--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "homepage": "./",
   "main": "src/electron-starter.js",
+  "version": "0.1.27",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
