--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -85,11 +85,13 @@ jobs:
         p12-password: ${{ secrets.APPLE_DEV_ID_APP_PASS }}
 
     - name: Checkout GUI
-      uses: actions/checkout@v2
-      with:
-        repository: 'Chia-Network/chia-blockchain-gui'
-        ref: 'main'
-        path: './chia-blockchain-gui'
+      run: |
+        	echo "Running git submodule update --init --recursive."
+        	git submodule update --init --recursive
+#        	echo "Running git submodule update."
+#        	echo ""
+#        	git submodule update
+
 
     - name: Run install script
       env:
