Double check submodule git status

--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -88,6 +88,8 @@ jobs:
       run: |
         echo "Running git submodule update --init --recursive."
         git submodule update --init --recursive
+        cd chia-blockchain-gui
+        git status
 
     - name: Run install script
       env:
