--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "framer-motion": "^3.3.0",
     "history": "^4.10.1",
     "is-electron": "^2.2.0",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.20",
     "make-plural": "^6.2.2",
     "match-sorter": "^6.2.0",
