Needs chia init

--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -105,6 +105,7 @@ jobs:
       run: |
         . ./activate
         git status
+        chia init
         chia version
         clang --version
         cd ./chia-blockchain-gui
