Azure needs that line

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ steps:
   - script: |
       . ./activate
       clang --version
+      pip wheel --use-pep517 --extra-index-url https://download.chia.net/simple/ --wheel-dir=wheels .
       pip install --no-index --find-links=./wheels/ chia-blockchain
     displayName: "Build and install wheels"
 
