--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -67,9 +67,9 @@ jobs:
           VALIDATE_PYTHON_PYLINT: true
           VALIDATE_PYTHON_FLAKE8: true
           VALIDATE_PYTHON_BLACK: true
-          PYTHON_BLACK_CONFIG_FILE: .python-black
+#          PYTHON_BLACK_CONFIG_FILE: .python-black
           VALIDATE_PYTHON_ISORT: true
-          PYTHON_ISORT_CONFIG_FILE: .isort.cfg
+#          PYTHON_ISORT_CONFIG_FILE: .isort.cfg
           VALIDATE_SHELL_SHFMT: true
           VALIDATE_TYPESCRIPT_ES: true
           VALIDATE_YAML: true
