try fetchdepth, modified isort.cfg

--- a/.github/linters/.isort.cfg
+++ b/.github/linters/.isort.cfg
@@ -1,7 +1,11 @@
 [settings]
+profile=
+
+; vertical hanging indent mode also used in black configuration
 multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-ensure_newline_before_comments = True
+
+; necessary because black expect the trailing comma
+include_trailing_comma = true
+
+; we chose 120 as line length
 line_length = 120
