--- a/.github/workflows/build-test-ubuntu-wallet.yml
+++ b/.github/workflows/build-test-ubuntu-wallet.yml
@@ -102,9 +102,9 @@ jobs:
     - name: Test clvm code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/clvm -v --durations 0
+        ./venv/bin/py.test tests/clvm -s -v--durations 0
 
     - name: Test blockchain code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/wallet -v --durations 0
+        ./venv/bin/py.test tests/wallet -s -v--durations 0
