--- a/.github/workflows/build-test-macos-wallet.yml
+++ b/.github/workflows/build-test-macos-wallet.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     name: MacOS Wallet Tests
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 40
+    timeout-minutes: 50
     strategy:
       fail-fast: false
       max-parallel: 4
@@ -90,9 +90,9 @@ jobs:
     - name: Test clvm code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/clvm -s -v --durations 0
+        ./venv/bin/py.test tests/clvm -v --durations 0
 
     - name: Test blockchain code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/wallet -s -v --durations 0
+        ./venv/bin/py.test tests/wallet -v --durations 0
