--- a/.github/workflows/upload-pypi-source.yml
+++ b/.github/workflows/upload-pypi-source.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Install developer requirements
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        venv/bin/python -m pip install pytest pytest-asyncio
 
     - name: Lint source with flake8
       run: |
