--- a/.github/workflows/upload-pypi-source.yml
+++ b/.github/workflows/upload-pypi-source.yml
@@ -43,10 +43,10 @@ jobs:
       env:
         SECRET: "${{ secrets.test_pypi_password }}"
 
-    - name: Install developer requirements
+    - name: Install lint requirements
       run: |
         python -m pip install --upgrade pip
-        venv/bin/python -m pip install pytest pytest-asyncio
+        python -m pip install pytest flake8 mypy
 
     - name: Lint source with flake8
       run: |
