--- a/.github/workflows/build-test-macos-core.yml
+++ b/.github/workflows/build-test-macos-core.yml
@@ -87,7 +87,7 @@ jobs:
         . ./activate
         venv/bin/python -m pip install -r requirements-dev.txt
 
-    - name: Test blockchain code with pytest
+    - name: Test core code with pytest
       run: |
         . ./activate
         ./venv/bin/py.test tests/core -s -v --durations 0
