--- a/.github/workflows/build-test-ubuntu-core.yml
+++ b/.github/workflows/build-test-ubuntu-core.yml
@@ -99,7 +99,7 @@ jobs:
         . ./activate
         venv/bin/python -m pip install -r requirements-dev.txt
 
-    - name: Test blockchain code with pytest
+    - name: Test core code with pytest
       run: |
         . ./activate
         ./venv/bin/py.test tests/core -v --durations 0
