--- a/.github/workflows/build-test-ubuntu-blockchain.yml
+++ b/.github/workflows/build-test-ubuntu-blockchain.yml
@@ -97,9 +97,15 @@ jobs:
     - name: Install developer requirements
       run: |
         . ./activate
-        venv/bin/python -m pip install pytest pytest-asyncio
+        venv/bin/python -m pip install pytest pytest-asyncio pytest-xdist
 
     - name: Test blockchain code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/blockchain -s -v --durations 0
+        ./venv/bin/py.test tests/blockchain -s -v --durations 0 --ignore tests/blockchain/test_weight_proof.py
+
+    - name: Test weight proof code with pytest
+      run: |
+        . ./activate
+        ./venv/bin/py.test tests/blockchain/test_weight_proof.py -s -v --durations 0 -n auto
+
