--- a/.github/workflows/build-test-ubuntu-core.yml
+++ b/.github/workflows/build-test-ubuntu-core.yml
@@ -90,16 +90,21 @@ jobs:
 
     - name: Install timelord
       run: |
-        . ./activate
+        . ./venv/bin/activate
         sh install-timelord.sh
         ./vdf_bench square_asm 400000
 
     - name: Install developer requirements
       run: |
-        . ./activate
-        venv/bin/python -m pip install pytest pytest-asyncio
+        . ./venv/bin/activate
+        venv/bin/python -m pip install pytest pytest-asyncio pytest-xdist
 
-    - name: Test core code with pytest
+    - name: Run serial core tests with pytest
       run: |
-        . ./activate
-        ./venv/bin/py.test tests/core -v --durations 0
+        . ./venv/bin/activate
+        ./venv/bin/py.test tests/non_parallel/core -v --durations 0
+
+    - name: Run parallel core tests with pytest
+      run: |
+        . ./venv/bin/activate
+        ./venv/bin/py.test -n auto tests/core -v --durations 0
