--- a/.github/workflows/build-test-ubuntu-simulation.yml
+++ b/.github/workflows/build-test-ubuntu-simulation.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     name: Ubuntu Simulation Tests
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 90
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       max-parallel: 4
@@ -97,7 +97,7 @@ jobs:
     - name: Install developer requirements
       run: |
         . ./activate
-        venv/bin/python -m pip install pytest pytest-asyncio
+        venv/bin/python -m pip install pytest pytest-asyncio pytest-xdist
 
     - name: Test simulation code with pytest
       run: |
