--- a/.github/workflows/build-linux-installer.yml
+++ b/.github/workflows/build-linux-installer.yml
@@ -80,15 +80,17 @@ jobs:
         node-version: '12.x'
 
     - name: Build .deb package
+      env:
+        SETUPTOOLS_SCM_PRETEND_VERSION: "1.0"
       run: |
         . ./activate
         cd ./chia-blockchain-gui
         git status
         cd ../build_scripts
-        sh build_linux.sh
+        sh build_linux.sh amd64
 
     - name: Upload Linux artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: Linux deb
+        name: Linux-Installers
         path: ${{ github.workspace }}/build_scripts/final_installer/
