--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         node-version: '12.x'
 
-    - name: Build .deb package
+    - name: Build ARM64 .deb package
       env:
         SETUPTOOLS_SCM_PRETEND_VERSION: "1.0"
       run: |
