--- a/.github/workflows/build-linux-installer.yml
+++ b/.github/workflows/build-linux-installer.yml
@@ -79,7 +79,7 @@ jobs:
       with:
         node-version: '12.x'
 
-    - name: Build .deb package
+    - name: Build .deb and .rpm packages
       env:
         SETUPTOOLS_SCM_PRETEND_VERSION: "1.0"
       run: |
