--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -37,7 +37,6 @@ jobs:
 
     - name: Build ARM64 Installer
       run: |
-        sudo dnf update -y
         podman run --rm=true \
           -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
           quay.io/pypa/manylinux2014_aarch64 \
@@ -49,11 +48,11 @@ jobs:
             /opt/python/cp38-cp38/bin/python -m venv venv && \
             if [ ! -f "activate" ]; then ln -s venv/bin/activate; fi && \
             . ./activate && \
-            sh install.sh
-            ldd --version
-            export SETUPTOOLS_SCM_PRETEND_VERSION="1.0"
-            cd build_scripts
-            sh build_linux.sh arm64
+            export SETUPTOOLS_SCM_PRETEND_VERSION="1.0" && \
+            sh install.sh && \
+            ldd --version && \
+            cd build_scripts && \
+            sh build_linux.sh arm64 \
           '
 
     - name: Upload Linux artifacts
