--- a/.github/workflows/build-linux-installer.yml
+++ b/.github/workflows/build-linux-installer.yml
@@ -72,6 +72,7 @@ jobs:
         INSTALL_PYTHON_VERSION: ${{ matrix.python-version }}
         BUILD_VDF_CLIENT: "N"
       run: |
+        export SETUPTOOLS_SCM_PRETEND_VERSION="1.0"
         sh install.sh
 
     - name: Setup Node 12.x
@@ -83,6 +84,7 @@ jobs:
       env:
         SETUPTOOLS_SCM_PRETEND_VERSION: "1.0"
       run: |
+        export SETUPTOOLS_SCM_PRETEND_VERSION="1.0"
         . ./activate
         sudo apt-get -y install rpm
         ldd --version
