--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -43,7 +43,7 @@ jobs:
           bash -exc '\
             echo $PATH && \
             curl -sL https://rpm.nodesource.com/setup_12.x | sudo bash - && \
-            sudo yum clean all && sudo yum makecache fast && \
+            yum clean all && yum makecache fast && \
             yum install -y nodejs fakeroot dpkg && \
             rm -rf venv && \
             export PATH=/opt/python/cp38-cp38/bin/:$PATH && \
