--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -42,6 +42,7 @@ jobs:
           quay.io/pypa/manylinux2014_aarch64 \
           bash -exc '\
             echo $PATH && \
+            yum install epel-release && \
             curl -sL https://rpm.nodesource.com/setup_12.x | bash - && \
             yum clean all && yum makecache fast && \
             yum install -y nodejs fakeroot dpkg && \
