--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -48,7 +48,8 @@ jobs:
             curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
             add-apt-repository ppa:deadsnakes/ppa -y && \
             apt update && \
-            apt -y install nodejs fakeroot python3.8 && \
+            apt -y install nodejs fakeroot && \
+            apt -y python3.8 python3.8-venv python3.8-distutils && \
             rm -rf venv && \
             python3.8 -m venv venv && \
             if [ ! -f "activate" ]; then ln -s venv/bin/activate; fi && \
