--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -44,15 +44,15 @@ jobs:
             echo $PATH && \
             apt update && \
             apt upgrade -y && \
-            apt -y install software-properties-common
+            apt -y install software-properties-common curl
             curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
             add-apt-repository ppa:deadsnakes/ppa -y && \
             apt update && \
             apt -y install nodejs fakeroot && \
-            apt -y python3.8 python3.8-venv python3.8-distutils && \
+            apt -y install python3.8 python3.8-venv python3.8-distutils && \
             rm -rf venv && \
             python3 --version && \
-            python3 -m venv venv && \
+            python3.8 -m venv venv && \
             if [ ! -f "activate" ]; then ln -s venv/bin/activate; fi && \
             . ./activate && \
             sh install.sh && \
