--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -45,10 +45,9 @@ jobs:
             apt update && \
             apt upgrade -y && \
             apt -y install software-properties-common curl git lsb bc dialog && \
-            curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
             add-apt-repository ppa:deadsnakes/ppa -y && \
-            apt update && \
-            apt -y install nodejs fakeroot && \
+            curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
+            apt -y install nodejs fakeroot sudo && \
             apt -y install python3.8 python3.8-venv python3.8-distutils && \
             rm -rf venv && \
             python3 --version && \
