--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -49,7 +49,7 @@ jobs:
             add-apt-repository ppa:deadsnakes/ppa -y && \
             curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
             apt -y install nodejs fakeroot \
-            python3.8 python3.8-venv python3.8-distutils && \
+            python3.8 python3.8-venv libpython3.8-dev python3.8-distutils && \
             rm -rf venv && \
             python3 --version && \
             python3.8 -m venv venv && \
