don't use -e with pip install

--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -60,7 +60,7 @@ jobs:
             pip install --upgrade pip && \
             pip install wheel && \
             pip install --extra-index-url https://pypi.chia.net/simple/ miniupnpc==2.1 && \
-            pip install -e . --extra-index-url https://pypi.chia.net/simple/ && \
+            pip install . --extra-index-url https://pypi.chia.net/simple/ && \
             ldd --version && \
             cd build_scripts && \
             sh build_linux.sh arm64 \
